kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crab-status-page
  labels:
    app: crab-status-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crab-status-page
  template:
    metadata:
      labels:
        app: crab-status-page
    spec:
      containers:
        - name: crab-status-page
          image: europe-west3-docker.pkg.dev/j11-exo6/crab-status-page/crab-status-page:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/stats
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/stats
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
