kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crab-status-page
spec:
  selector:
    app: crab-status-page
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
