kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crab-status-page
spec:
  ingressClassName: gce
  defaultBackend:
    service:
      name: crab-status-page
      port:
        number: 80
